brat/test/golden/error/nameclash1.brat.golden
Error in test/golden/error/nameclash1.brat@1:1-16
type Nat(x) = x
^^^^^^^^^^^^^^^

  Name clash: Identifier `Nat` is already used

